# ciwalk

./: .gitignore  Dockerfile.runner  LICENSE  README.md  cwalk.md  pyproject.toml
.github/workflows/: linux-smoke.yml  publish-runner.yml
docs/: demo.cast
examples/: broken-ci.yml  hello.yml
scripts/: linux-smoke.sh
src/ciwalk/: __init__.py  cli.py  container.py  errors.py  expressions.py  model.py  parser.py  session.py  shell.py
tests/: test_container.py  test_expressions.py  test_parser.py  test_session.py  test_skip_job.py
