[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ciwalk"
version = "0.1.0"
description = "Run CI pipelines locally in Docker with interactive pause/resume debugging"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "ciwalk contributors" }]
keywords = ["ci", "github-actions", "docker", "debug", "local"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Testing",
]
dependencies = [
  "docker>=7.0.0",
  "PyYAML>=6.0",
  "typer>=0.12.0",
  "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.4",
]

[project.scripts]
ciwalk = "ciwalk.cli:app"

[project.urls]
Homepage = "https://github.com/ankit/ciwalk"
Repository = "https://github.com/ankit/ciwalk"

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/examples",
  "/tests",
  "/README.md",
  "/LICENSE",
  "/cwalk.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
